--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -1,7 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>Aspor.Common</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Davide Wietlisbach</Authors>
   </PropertyGroup>
 
   <ItemGroup>
