--- a/EF/EF.csproj
+++ b/EF/EF.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>Aspor.EF</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Davide Wietlisbach</Authors>
   </PropertyGroup>
 
   <ItemGroup>
