--- a/Streaming.Core/Streaming.Core.csproj
+++ b/Streaming.Core/Streaming.Core.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>Aspor.Streaming</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Davide Wietlisbach</Authors>
   </PropertyGroup>
 
   <ItemGroup>
