--- a/Streaming.RabbitMQ/Streaming.RabbitMQ.csproj
+++ b/Streaming.RabbitMQ/Streaming.RabbitMQ.csproj
@@ -1,10 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Library</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <ApplicationIcon />
-    <StartupObject />
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>Aspor.Streaming</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Davide Wietlisbach</Authors>
   </PropertyGroup>
 
   <ItemGroup>
