--- a/Streaming.Core/Streaming.Core.csproj
+++ b/Streaming.Core/Streaming.Core.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageId>Aspor.Streaming</PackageId>
-    <Version>1.0.0</Version>
+    <PackageId>Aspor.Streaming.Core</PackageId>
+    <Version>1.0.1</Version>
     <Authors>Davide Wietlisbach</Authors>
   </PropertyGroup>
 
