Changed created to ok in EF controller

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EF\EF.csproj" />
+    <ProjectReference Include="..\Export\Export.csproj" />
     <ProjectReference Include="..\Streaming\Streaming.csproj" />
   </ItemGroup>
 
