--- a/Streaming.RabbitMQ/Streaming.RabbitMQ.csproj
+++ b/Streaming.RabbitMQ/Streaming.RabbitMQ.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+	<TargetFramework>net6.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>Aspor.Streaming.RabbitMQ</PackageId>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
     <Authors>Davide Wietlisbach</Authors>
   </PropertyGroup>
 
