--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,9 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '6.0.100'
       - uses: actions/checkout@v2
       - name: Publish Common
         uses: rohith/publish-nuget@v2
