--- a/Streaming/Streaming.csproj
+++ b/Streaming/Streaming.csproj
@@ -1,21 +1,30 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-	<TargetFramework>net6.0</TargetFramework>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageId>Aspor.Streaming</PackageId>
-    <Version>1.0.4</Version>
-    <Authors>Davide Wietlisbach</Authors>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageId>Aspor.Streaming</PackageId>
+		<Version>1.0.5</Version>
+		<Authors>Davide Wietlisbach</Authors>
+		<RepositoryUrl>https://github.com/Aspor-Stack/aspor</RepositoryUrl>
+		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+		<PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<Description>Asp .Net streaming module of the aspor project. Aspor is a comprehensive web stack for building fast, modern and reilable web applications (SPA / PWA). The concept is based on a decoupled architecture with an independent OData interface running on an Asp .net service that is consumed by the React frontend application. Backend services are seperated with a Microservice architecture and connected together with Aspor streaming.</Description>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <FrameworkReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.0.4" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Include="..\README.md" Pack="true" PackagePath="\" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Streaming.Core\Streaming.Core.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+		<PackageReference Include="Microsoft.AspNetCore.OData" Version="8.0.4" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\Streaming.Core\Streaming.Core.csproj" />
+	</ItemGroup>
 
 
 </Project>
