--- a/Streaming.Core/Streaming.Core.csproj
+++ b/Streaming.Core/Streaming.Core.csproj
@@ -9,7 +9,7 @@
 		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
 		<PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
-		<Description>.Net core and client streaming module of the aspor project. Aspor is a comprehensive web stack for building fast, modern and reilable web applications (SPA / PWA). The concept is based on a decoupled architecture with an independent OData interface running on an Asp .net service that is consumed by the React frontend application. Backend services are seperated with a Microservice architecture and connected together with Aspor streaming.</Description>
+		<Description>.Net core and client streaming module of the aspor project. Aspor is a comprehensive web stack for building fast, modern and reliable web applications (SPA / PWA). The concept is based on a decoupled architecture with an independent OData interface running on an Asp .net service that is consumed by the React frontend application. Backend services are seperated with a Microservice architecture and connected together with Aspor streaming.</Description>
 	</PropertyGroup>
 
 	<ItemGroup>
