--- a/Validation/Validation.csproj
+++ b/Validation/Validation.csproj
@@ -4,8 +4,8 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageId>Aspor.Validation</PackageId>
-		<Version>1.0.7</Version>
-		<Authors>Davide Wietlisbach</Authors>
+		<Version>1.0.8</Version>
+		<Authors>Aspor-Stack</Authors>
 		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
 		<PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
